--- a/.gitmodules
+++ b/.gitmodules
@@ -1,18 +1,18 @@
 [submodule "src/GFDL_atmos_cubed_sphere"]
 	path = src/GFDL_atmos_cubed_sphere
-	url = git@github.com:hinnes97/GFDL_atmos_cubed_sphere.git
+	url = https://github.com/NOAA-GFDL/GFDL_atmos_cubed_sphere.git
 [submodule "src/FMS"]
 	path = src/FMS
-	url = git@github.com:hinnes97/FMS.git
+	url = https://github.com/NOAA-GFDL/FMS.git
 [submodule "src/atmos_drivers"]
 	path = src/atmos_drivers
-	url = git@github.com:hinnes97/atmos_drivers.git
+	url = https://github.com/NOAA-GFDL/atmos_drivers.git
 [submodule "src/atmos_phys"]
 	path = src/atmos_phys
-	url = git@github.com:hinnes97/atmos_phys.git
+	url = https://github.com/NOAA-GFDL/atmos_phys.git
 [submodule "src/FRE-NCtools"]
 	path = src/FRE-NCtools
-	url = git@github.com:hinnes97/FRE-NCtools.git
+	url = https://github.com/NOAA-GFDL/FRE-NCtools.git
 [submodule "src/mkmf"]
 	path = src/mkmf
-	url = git@github.com:hinnes97/mkmf.git
+	url = https://github.com/NOAA-GFDL/mkmf.git
